src/Board.module.scss
.board {
  display: grid;
  grid-template-columns: repeat(8, 64px);
  grid-template-rows: repeat(8, 64px);
  image-rendering: pixelated;

  & > div {
    background: #AEAEAE;
    font-family: sans-serif;
    user-select: none;
    position: relative;
    z-index: 1;
    width: 100%;
    height: 100%;

    img {
      width: 100%;
      height: 100%;
      position: relative;
      z-index: 2;
    }

    span {
      position: absolute;
      pointer-events: none;
      user-select: none;
      z-index: 1;

      &.rowName {
        right: 0;
        top: 0;
      }

      &.colName {
        left: 0;
        bottom: 0;
      }
    }

    &.dark {
      background: #5B5B5B;
    }

    &.active {
      outline: 2px solid red;
      z-index: 3;
    }

    &.validMove::before {
      content: "•";
      pointer-events: none;
      position: absolute;
      inset: 0;
      text-align: center;
      font-size: 128px;
      color: rgba(184, 184, 184, 0.67);
      z-index: 2;
    }

    &.drag img {
      opacity: .5;
    }

    &.drop {
      filter: sepia(100%);
    }

    &.check {
      background: red;
    }
  }

  img.ghost {
    position: absolute;
    width: 64px;
    height: 64px;
    z-index: 4;
    transform: translate(-50%, -50%);
    pointer-events: none;
  }
}

